feature - preset load & save
when you save preset,
save parameter file
save azavg file
save data_r file
save data_q file

--- a/rdf-analyse.ipynb
+++ b/rdf-analyse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "7e442015",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "from pathlib import Path\n",
     "import glob\n",
     "import numpy as np\n",
-    "import image_process\n",
+    "import calculate.image_process as image_process\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "from datacube import DataCube\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "347ce2a0",
    "metadata": {},
    "outputs": [],
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "5b75d121",
    "metadata": {},
    "outputs": [],
    "source": [
-    "elem1, elem2, elem3, elem4, elem5 = [14,8,0,0,0]\n",
+    "elem1, elem2, elem3, elem4, elem5 = [14,8,1,0,0]\n",
     "element_nums = np.array([elem1, elem2, elem3, elem4, elem5])\n",
     "\n",
-    "e1, e2, e3, e4, e5 = [1,2,0,0,0]\n",
+    "e1, e2, e3, e4, e5 = [1,2,1,0,0]\n",
     "es = np.array([e1,e2,e3,e4,e5])\n",
     "\n",
     "e_tot = np.sum(np.array(es))\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "ff4d0bfb",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
        "       3.05452816e-02, 2.14097897e-01, 1.59963502e+00, 9.99096638e+00])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "8b7d2c79",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "f8f7f862",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
+   "id": "18a9732e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.37707705, 0.37586364, 0.37465085, ..., 0.00550971, 0.00550534,\n",
+       "       0.00550098])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f[2][50:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "0688af27",
    "metadata": {},
    "outputs": [],
@@ -118,6 +140,25 @@
     "fq_sq = fq**2\n",
     "gq = np.sum( f**2 * e_ratio[:,None], axis=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cf912879",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., ..., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -138,26 +179,6 @@
     "fqfit = gq[qpos]\n",
     "iqfit = Iq[qpos]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "9e8ad765",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.39555829,  1.40605121,  1.41654413, ..., 26.21131282,\n",
-       "       26.22180574, 26.23229866])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
